Change japanese translations

--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -281,8 +281,8 @@
   "tabs_bar.local_timeline": "ローカル",
   "tabs_bar.notifications": "通知",
   "tabs_bar.search": "検索",
-  "timeline.media": "メディア",
-  "timeline.posts": "投稿",
+  "timeline.media": "メディアあり",
+  "timeline.posts": "全投稿",
   "trends.count_by_accounts": "{count} {rawCount, plural, one {人} other {人}} がトゥート",
   "trends.header": "トレンドタグ",
   "trends.refresh": "更新",
