Fix custom themes

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1008,9 +1008,9 @@ ja:
     contrast: Mastodonﾊｲｺﾝﾄﾗｽﾄ
     mastodon-light: Mastodonライト
     blue: クラゲ丼blue
+    blue2: クラゲ丼blue2
     green: クラゲ丼green
     dark-green: クラゲ丼dark-green
-    chocolate: クラゲ丼chocolate
     purple: クラゲ丼purple
     light-grey: クラゲ丼light-grey
     light-blue: クラゲ丼light-blue
