Fix custom themes etc

--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -330,12 +330,12 @@
   "report.submit": "通報する",
   "report.target": "{target}さんを通報する",
   "search.placeholder": "検索",
-  "search_popout.search_format": "高度な検索フォーマット",
+  "search_popout.search_format": "検索フォーマット",
   "search_popout.tips.full_text": "表示名やユーザー名、ハッシュタグのほか、あなたのトゥートやお気に入り、ブーストしたトゥート、返信に一致する単純なテキスト。",
-  "search_popout.tips.hashtag": "ハッシュタグ",
-  "search_popout.tips.status": "トゥート",
-  "search_popout.tips.full_text": "キーワードによる全文検索（少し時間がかかることがあります）",
-  "search_popout.tips.user": "ユーザー",
+  "search_popout.tips.hashtag": "ハッシュタグ検索",
+  "search_popout.tips.status": "トゥート検索",
+  "search_popout.tips.full_text": "キーワードによる全文検索",
+  "search_popout.tips.user": "ユーザー検索",
   "search_results.accounts": "人々",
   "search_results.hashtags": "ハッシュタグ",
   "search_results.statuses": "トゥート",
